# novastore

./: CMakeLists.txt  README.md  novastore.kdev4  org.kde.novastore.appdata.xml
.obs/: workflows.yml
src/: CMakeLists.txt  assets.qrc  main.cpp  main.qml  qml.qrc
src/backend/: appbackend.cpp  appbackend.h  async.cpp  async.h
src/code/: appbackend.cpp  appbackend.h  async.cpp  async.h  main.cpp  repodata.cpp  repodata.h  systeminfo.cpp  systeminfo.h
src/controls/: Applications.qml  Details.qml  DetailsPage.qml  Home.qml  HomePage.qml  Management.qml  ModernAppsPage.qml  Packages.qml  Password.qml  Provides.qml  Requires.qml  Search.qml  SearchPage.qml  main.qml  qml.qrc
src/data/: project.desktop
